--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,7 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-   /*Primary Color (e.g. Button) */
+  /*Primary Color (e.g. Button) */
   --primary: oklch(0.63 0.1699 149.21);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
@@ -71,13 +71,13 @@
   --chart-5: oklch(0.769 0.188 70.08);
   /* Sidebar background color */
   --sidebar: oklch(0.2 0.0283 174.92);
-   /* Sidebar Text color */
+  /* Sidebar Text color */
   --sidebar-foreground: oklch(0.82 0.0057 182.99);
   --sidebar-primary: oklch(0.205 0 0);
   --sidebar-primary-foreground: oklch(0.985 0 0);
-   /* Sidebar active item background color */
+  /* Sidebar active item background color */
   --sidebar-accent: oklch(0.34 0.0601 171.21);
-   /* Sidebar Active item text color */
+  /* Sidebar Active item text color */
   --sidebar-accent-foreground: oklch(1 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
@@ -124,4 +124,11 @@
   body {
     @apply bg-background text-foreground;
   }
-} 
+}
+
+@layer base {
+  button:not([disabled]),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
+}
